--- a/juegos de mesa.html
+++ b/juegos de mesa.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
 <body style="margin-left: 100px">
+    <style>
+    h1{background: red}
+    </style>
     <h1>
     Juegos de mesa
     </h1>
