--- a/juegos de mesa.html
+++ b/juegos de mesa.html
@@ -106,7 +106,7 @@
     8+
     </td>
     <td>
-    <img src="file:///C:/Users/jerot/OneDrive/Documentos/paginas%20web/02-juegos%20de%20mesa/One%20night%20ultimate%20werwolf%20image.webp"  width="128" />
+    <img src="One%20night%20ultimate%20werwolf%20image.webp"  width="128" />
     </td>
     </tr>
     </table>
@@ -118,7 +118,7 @@
     complicado pero divertido<img src="900583.jpg" width="128"height="128"/>
     </li>
     <li>
-    el que mas me gusta de 2 equipos<img src="file:///C:/Users/jerot/OneDrive/Documentos/paginas%20web/02-juegos%20de%20mesa/One%20night%20ultimate%20werwolf%20image.webp"  width="128" />
+    el que mas me gusta de 2 equipos<img src="One%20night%20ultimate%20werwolf%20image.webp"  width="128" />
     </li>
     </ol>
     <p>
@@ -132,6 +132,6 @@
     <p>
         el que mas me gusta de 2 equipos
     </p>
-    <img src="file:///C:/Users/jerot/OneDrive/Documentos/paginas%20web/02-juegos%20de%20mesa/One%20night%20ultimate%20werwolf%20image.webp"  width="128" />
+    <img src="One%20night%20ultimate%20werwolf%20image.webp"  width="128" />
 </body>
 </html>
