--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     One night ultimate werewolf
     </td>
     <td>
-     3 a 10
+    3 a 10
     </td>
     <td>
     10 min
@@ -107,6 +107,26 @@
     </td>
     <td>
     <img src="One%20night%20ultimate%20werwolf%20image.webp"  width="128" />
+    </td>
+    </tr>
+    <tr>
+    <td>
+    virus
+    </td>
+    <td>
+    2 a 6
+    </td>
+    <td>
+    20 min
+    </td>
+    <td>
+    nop
+    </td>
+    <td>
+    8+
+    </td>
+    <td>
+    <img src="b3afaac6f50d24597eec8eab9d007575.jpeg" width="128" height= "128"/>
     </td>
     </tr>
     </table>
