--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
     <th>
     foto
     </th>
+    <th>
+    enlace
+    </th>
     </tr>
     <tr>
     <td>
@@ -66,7 +69,14 @@
     8+
     </td>
     <td>
+    <a href ="https://boardgamegeek.com/boardgame/260605/camel-second-edition"target="_blank">
     <img src="camel up image.jpg" />
+    </a>
+    </td>
+    <td>
+    <a href ="https://boardgamegeek.com/boardgame/260605/camel-second-edition">
+    mas informacion
+    </a>
     </td>
     </tr>
     <tr>
@@ -88,6 +98,11 @@
     <td>
     <img src="900583.jpg" width="128"height="128"/>
     </td>
+    <td>
+    <a href ="https://boardgamegeek.com/boardgame/9209/ticket-ride"target="_blank">
+    mas informacion
+    </a>
+    </td>
     </tr>
     <tr>
     <td width="125">
@@ -107,6 +122,11 @@
     </td>
     <td>
     <img src="One%20night%20ultimate%20werwolf%20image.webp"  width="128" />
+    </td>
+    <td>
+    <a href ="https://boardgamegeek.com/boardgame/147949/one-night-ultimate-werewolf"target="_blank">
+    mas informacion
+    </a>
     </td>
     </tr>
     <tr>
@@ -128,8 +148,17 @@
     <td>
     <img src="b3afaac6f50d24597eec8eab9d007575.jpeg" width="128" height= "128"/>
     </td>
+    <td>
+    <a href ="https://boardgamegeek.com/boardgame/180020/virus"target="_blank">
+    mas informacion
+    </a>
+    </td>
     </tr>
     </table>
+    <p>
+    mis juegos favoritos son :<a href ="https://boardgamegeek.com/boardgame/260605/camel-second-edition"target="_blank">camel up</a>,<a href ="https://boardgamegeek.com/boardgame/9209/ticket-ride">ticket to ride</a>
+    ,<a href = "https://boardgamegeek.com/boardgame/147949/one-night-ultimate-werewolf">one night ultimate werewolf</a>  y <a href ="https://boardgamegeek.com/boardgame/180020/virus">virus</a>
+    </p>
     <ol>
     <li>
     azar pero con estrategia y divertido<img src="camel up image.jpg" />
