--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     foto
     </th>
     <th>
-    enlace
+    enlaces
     </th>
     </tr>
     <tr>
@@ -124,9 +124,16 @@
     <img src="One%20night%20ultimate%20werwolf%20image.webp"  width="128" />
     </td>
     <td>
+    <p>
     <a href ="https://boardgamegeek.com/boardgame/147949/one-night-ultimate-werewolf"target="_blank">
     mas informacion
     </a>
+    </p>
+    <p>
+    <a href ="tickettoride.html">
+    descripcion
+    </a>
+    </p>
     </td>
     </tr>
     <tr>
